# NeuroAssistant_AI

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .python-version  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: assistant.py  files.py  health.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/schemas/: assistant.py  common.py  files.py
backend/app/services/: azure_blob_service.py  azure_content_safety_service.py  azure_openai_service.py  azure_search_service.py  export_service.py  mock_ai_services.py  orchestrator.py  word_export_service.py
backend/app/utils/: text.py
backend/tests/: test_assistant_transform.py  test_assistant_validation.py  test_export.py  test_health.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/demo/: AzureArchitecture.tsx  ExplainabilityPanel.tsx  InputPanel.tsx  MetricsStrip.tsx  ModeSelector.tsx  OutputPanel.tsx  PreferencePanel.tsx  ResponsibleAI.tsx  Workspace.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx  RightRail.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  LoadingDots.tsx  Toggle.tsx
frontend/src/data/: sampleInputs.ts
frontend/src/hooks/: useAssistant.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: HomePage.tsx
frontend/src/types/: api.ts
old/frontend/src/components/layout/: Hero.tsx
